--- a/portfolio.html
+++ b/portfolio.html
@@ -1,65 +1,75 @@
-<!doctype html>
-<html lang="en-us">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style_all_pages.css">
+    <link rel="stylesheet" href="assets/css/style_portfolio.css"
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+    <div>
+        <!-- trying to use this box to fill in the space to the left of where my name should be -->
+        <!-- need to make a bigger container so that it can contain all of these divs within it to styalize it better and within one bar
+        as of right now, they are on two different lines because they arent in that bigger, encompassing div -->
+        <!-- <box class="header"> 
+            <box class="myname">
+                <h3>Ben Cooley</h3>
+            </box> -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="index.html">Ben Cooley</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="index.html">About</a>
+                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="contact.html">Contact</a>
+                  </div>
+                </div>
+              </nav>
+        </box>
     </div>
-  </header>
 
-  <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+    <div class="main">
+            <box>
+                <h2 class="title">Portfolio</h2>
+                    <div class="pics">
+                        <div class="pic1">
+                            <h6>My</h6>
+                                <img src= "assets/images/pic1.jpg" alt= "placeholder 1">   
+                        </div>
+                        <div class="pic2">
+                            <h6>Name</h6>
+                                <img src= "assets/images/pic2.jpg" alt= "placeholder 2">
+                        </div>
+                        <div class="pic3">
+                            <h6>Is</h6>
+                                <img src= "assets/images/pic3.jpg" alt= "placeholder 3">
+                        </div>
+                        <div class="pic4">
+                            <h6>Ben</h6>
+                                <img src= "assets/images/pic4.jpg" alt= "placeholder 4">
+                        </div>
+                        <div class="pic5">
+                            <h6>Cooley</h6>
+                                <img src= "assets/images/pic5.jpg" alt= "placeholder 5">
+                        </div>
+                    </div>
+                        
+            </box>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
-    </section>
-
-  </div>
-
-  <footer>
-    <div class="container">
-      Copyright &copy;
+    
+    <div>    
+        <!-- <hr> -->
+        <footer>copyright</footer>    
     </div>
-  </footer>
+
 </body>
-
+</head>
 </html>
