--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </box>
                 </div>
 
-    <div class="main">
+    <div class="container">
         <!-- trying to make another box for the text and image section in middle of page here -->
         <box>
             <h2 class="title">About Me</h2>
