--- a/portfolio.html
+++ b/portfolio.html
@@ -36,27 +36,27 @@
         </box>
     </div>
 
-    <div class="main">
+    <div class="container">
             <box>
                 <h2 class="title">Portfolio</h2>
-                    <div class="pics">
-                        <div class="pic1">
+                    <div class="row">
+                        <div class="col-sm-5">
                             <h6>My</h6>
                                 <img src= "assets/images/pic1.jpg" alt= "placeholder 1">   
                         </div>
-                        <div class="pic2">
+                        <div class="col-sm-5">
                             <h6>Name</h6>
                                 <img src= "assets/images/pic2.jpg" alt= "placeholder 2">
                         </div>
-                        <div class="pic3">
+                        <div class="col-sm-5">
                             <h6>Is</h6>
                                 <img src= "assets/images/pic3.jpg" alt= "placeholder 3">
                         </div>
-                        <div class="pic4">
+                        <div class="col-sm-5">
                             <h6>Ben</h6>
                                 <img src= "assets/images/pic4.jpg" alt= "placeholder 4">
                         </div>
-                        <div class="pic5">
+                        <div class="col-sm-5">
                             <h6>Cooley</h6>
                                 <img src= "assets/images/pic5.jpg" alt= "placeholder 5">
                         </div>
