--- a/portfolio.html
+++ b/portfolio.html
@@ -36,29 +36,45 @@
         </box>
     </div>
 
-    <div class="container">
+    <div class="container pics">
             <box>
                 <h2 class="title">Portfolio</h2>
                     <div class="row">
-                        <div class="col-sm-5">
-                            <h6>My</h6>
-                                <img src= "assets/images/pic1.jpg" alt= "placeholder 1">   
+                        <div class="col-sm-4">
+                            <a href="https://quattuor.herokuapp.com/">
+                                <!-- <h6>Quattuor</h6> -->
+                                <img src= "assets/images/quattuor.png" alt= "quattuor"> 
+                            </a>  
                         </div>
-                        <div class="col-sm-5">
-                            <h6>Name</h6>
-                                <img src= "assets/images/pic2.jpg" alt= "placeholder 2">
+                        <div class="col-sm-4">
+                            <a href="https://devon-dheeru-ben.herokuapp.com/">
+                                <!-- <h6>Cinema Snapshot</h6> -->
+                                <img src= "assets/images/cinemaSnap.png" alt= "cinemaSnapshot" style="width: 90%; margin-top: 15%;"> 
+                            </a>  
                         </div>
-                        <div class="col-sm-5">
-                            <h6>Is</h6>
-                                <img src= "assets/images/pic3.jpg" alt= "placeholder 3">
+                        <div class="col-sm-4">
+                            <a href="https://be-cool.github.io/group-project/">
+                                <!-- <h6>Event Finder</h6> -->
+                                <img src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;"> 
+                            </a>                          
                         </div>
-                        <div class="col-sm-5">
-                            <h6>Ben</h6>
-                                <img src= "assets/images/pic4.jpg" alt= "placeholder 4">
+                        <div class="col-sm-4">
+                            <a href="https://bookapp-bc.herokuapp.com/">
+                                <!-- <h6>Google Book Search</h6> -->
+                                <img id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks"> 
+                            </a>                          
                         </div>
-                        <div class="col-sm-5">
-                            <h6>Cooley</h6>
-                                <img src= "assets/images/pic5.jpg" alt= "placeholder 5">
+                        <div class="col-sm-4">
+                            <a href="https://be-cool.github.io/gif-homework/">
+                                <!-- <h6>Giphy</h6> -->
+                                <img id="giphy" src= "assets/images/giphy.png" alt= "giphy"> 
+                            </a>                          
+                        </div>
+                        <div class="col-sm-4">
+                                <a href="https://be-cool.github.io/train-scheduler/">
+                                    <!-- <h6>Train Scheduler</h6> -->
+                                    <img id="train" src= "assets/images/train.jpeg" alt= "trainScheduler"> 
+                                </a>                          
                         </div>
                     </div>
                         
