--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homework 1</title>
+    <title>HW 2 | Ben Cooley | bootstrap</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style_all_pages.css">
     <link rel="stylesheet" href="assets/css/style_index.css">
@@ -12,29 +12,21 @@
 
 <body>
 
-                <div>
-                    <!-- trying to use this box to fill in the space to the left of where my name should be -->
-                    <!-- need to make a bigger container so that it can contain all of these divs within it to styalize it better and within one bar
-                    as of right now, they are on two different lines because they arent in that bigger, encompassing div -->
-                    <!-- <box class="header"> 
-                        <box class="myname">
-                            <h3>Ben Cooley</h3>
-                        </box> -->
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <a class="navbar-brand" href="index.html">Ben Cooley</a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                              <div class="navbar-nav">
-                                <a class="nav-item nav-link active" href="index.html">About</a>
-                                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                                <a class="nav-item nav-link" href="contact.html">Contact</a>
-                              </div>
-                            </div>
-                          </nav>
-                    </box>
-                </div>
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Ben Cooley</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About</a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
+              </div>
+            </div>
+        </nav>
+    </div>
 
     <div class="container">
         <!-- trying to make another box for the text and image section in middle of page here -->
