background image transparency

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </div>
 
-    <div class="container">
+    <div class="box container">
         <!-- trying to make another box for the text and image section in middle of page here -->
         <box>
             <h2 class="title">About Me</h2>
@@ -49,10 +49,10 @@
                         Well that's enough about me - now I need to focus on the material so I can improve with all of this.
                     </p>
         </box>
-
-        <!-- <hr> -->
-        <footer>copyright</footer>
     </div>
+        <!-- <hr> -->
+    <footer>copyright</footer>
+
 </body>
 
 </html>
