--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         </box>
     </div>
 
-    <div class="container pics">
+    <div class="box container pics">
             <box>
                 <h2 class="title">Portfolio</h2>
                     <div class="row">
