styling updates - final background image with transparency

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <box class="myname">
                 <h3>Ben Cooley</h3>
             </box> -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">Ben Cooley</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -40,12 +40,13 @@
             <!-- trying to make another box for the text and image section in middle of page here -->
             <box>
                 <h2 class="title">Contact
-                    <h4><a href="https://github.com/be-cool"><img id="github" src="/assets/images/github.png" alt="github"></a>     
-                    <a href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="/assets/images/linkedin.png" alt="linkedin"></a></h4>
-                        <div class="contactInfo">
-                            <h4>Email: <a href="mailto:bcooley58@gmail.com">bcooley58@gmail.com</a></h4>
-                            <h4>Cell Phone: 267-257-4232</h4>
-                        </div>    
+                    <h4>
+                        <a class="contactPics" href="https://github.com/be-cool"><img id="github" src="/assets/images/github.png" alt="github"></a>     
+                        <a class="contactPics" href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="/assets/images/linkedin.png" alt="linkedin"></a></h4>
+                            <div class="contactInfo">
+                                <h4>Email: <a href="mailto:bcooley58@gmail.com">bcooley58@gmail.com</a></h4>
+                                <h4>Cell Phone: 267-257-4232</h4>
+                            </div>    
                 </h2>
             </box>
         
