--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
             <box class="myname">
                 <h3>Ben Cooley</h3>
             </box> -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">Ben Cooley</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
+                <div class="navbar collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar navbar-nav">
                     <a class="nav-item nav-link active" href="index.html">About</a>
                     <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                     <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -43,38 +43,38 @@
                         <div class="col-sm-4">
                             <a href="https://quattuor.herokuapp.com/">
                                 <!-- <h6>Quattuor</h6> -->
-                                <img src= "assets/images/quattuor.png" alt= "quattuor"> 
+                                <img class="pic" src= "assets/images/quattuor.png" alt= "quattuor"> 
                             </a>  
                         </div>
                         <div class="col-sm-4">
                             <a href="https://devon-dheeru-ben.herokuapp.com/">
                                 <!-- <h6>Cinema Snapshot</h6> -->
-                                <img src= "assets/images/cinemaSnap.png" alt= "cinemaSnapshot" style="width: 90%; margin-top: 15%;"> 
+                                <img class="pic" src= "assets/images/cinemaSnap.png" alt= "cinemaSnapshot" style="width: 90%; margin-top: 15%;"> 
                             </a>  
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/group-project/">
                                 <!-- <h6>Event Finder</h6> -->
-                                <img src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;"> 
+                                <img class="pic" src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;"> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://bookapp-bc.herokuapp.com/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks"> 
+                                <img class="pic" id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks"> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/gif-homework/">
                                 <!-- <h6>Giphy</h6> -->
-                                <img id="giphy" src= "assets/images/giphy.png" alt= "giphy"> 
+                                <img class="pic" id="giphy" src= "assets/images/giphy.png" alt= "giphy"> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
-                                <a href="https://be-cool.github.io/train-scheduler/">
+                            <a href="https://be-cool.github.io/train-scheduler/">
                                     <!-- <h6>Train Scheduler</h6> -->
-                                    <img id="train" src= "assets/images/train.jpeg" alt= "trainScheduler"> 
-                                </a>                          
+                                <img class="pic" id="train" src= "assets/images/train.jpeg" alt= "trainScheduler"> 
+                            </a>                          
                         </div>
                     </div>
                         
