--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div>
+    <div class="color">
         <!-- trying to use this box to fill in the space to the left of where my name should be -->
         <!-- need to make a bigger container so that it can contain all of these divs within it to styalize it better and within one bar
         as of right now, they are on two different lines because they arent in that bigger, encompassing div -->
@@ -25,8 +25,8 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="index.html">About</a>
                     <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                     <a class="nav-item nav-link" href="contact.html">Contact</a>
