added more links to portfolio. style updates to about. contact is done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
                     </p>
         </box>
     </div>
+    <div class="skillsBox box container">
+            <!-- trying to make another box for the text and image section in middle of page here -->
+            <box>
+                <h2 class="title">Skills</h2>
+                    <div class="meter"> 
+                        <span style="width:85%;"><span class="progress"><h5 id="skill">HTML&CSS - 90%</h5></span></span>
+                    </div>
+                    <div class="meter"> 
+                        <span style="width:55%;"><span class="progress"><h5 id="skill">React - 50%</h5></span></span>
+                    </div>
+                    <div class="meter">
+                        <span style="width:75%;"><span class="progress"><h5 id="skill">Javascript - 70%</h5></span></span>
+                    </div>
+                    <div class="meter"> 
+                        <span style="width:50%;"><span class="progress"><h5 id="skill">MongoDB - 40%</h5></span></span>
+                    </div>
+                <h5>Also possess working knowledge of: Node.js, Express, MySQL, JQuery, RESTful APIs</h5>
+            </box>
+        </div>
         <!-- <hr> -->
     <footer>copyright</footer>
 
