--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,24 @@
                                 <img class="pic" id="train" src= "assets/images/train.jpeg" alt= "trainScheduler"> 
                             </a>                          
                         </div>
+                        <div class="col-sm-4">
+                            <a href="https://be-cool.github.io/trivia-game/">
+                                <!-- <h6>Google Book Search</h6> -->
+                                <img class="pic" id="train" src= "assets/images/cast.jpg" alt= "seinfeld"> 
+                            </a>                          
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://be-cool.github.io/word-guess-game/">
+                                <!-- <h6>Giphy</h6> -->
+                                <img class="pic" id="hangman" src= "assets/images/hangman-style.png" alt= "hangman"> 
+                            </a>                          
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="https://bc-burger-app.herokuapp.com/">
+                                    <!-- <h6>Train Scheduler</h6> -->
+                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger"> 
+                            </a>                          
+                        </div>
                     </div>
                         
             </box>
