--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HW 2 | Ben Cooley | bootstrap</title>
+    <title>Ben Cooley - Profile</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style_all_pages.css">
     <link rel="stylesheet" href="assets/css/style_index.css">
@@ -61,7 +61,7 @@
                     <div class="meter"> 
                         <span style="width:50%;"><span class="progress"><h5 id="skill">MongoDB - 40%</h5></span></span>
                     </div>
-                <h5>Also possess working knowledge of: Node.js, Express, MySQL, JQuery, RESTful APIs</h5>
+                <h5 class="skills">Have created web applications with, or possess working knowledge of: Node.js, Express, MySQL, JQuery, RESTful APIs, Handlebars, Firebase, React Hooks</h5>
             </box>
         </div>
         <!-- <hr> -->
