--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Ben Cooley - Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style_all_pages.css">
     <link rel="stylesheet" href="assets/css/style_portfolio.css"
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="index.html">About</a>
-                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="index.html">About</a>
+                    <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
                     <a class="nav-item nav-link" href="contact.html">Contact</a>
                   </div>
                 </div>
@@ -43,55 +43,55 @@
                         <div class="col-sm-4">
                             <a href="https://quattuor.herokuapp.com/">
                                 <!-- <h6>Quattuor</h6> -->
-                                <img class="pic" src= "assets/images/quattuor.png" alt= "quattuor"> 
+                                <img class="pic" src= "assets/images/quattuor.png" alt= "quattuor" data-toggle="tooltip" title="Sports-focused social media web app built using React, Express server, MongoDB, pure CSS and more"> 
                             </a>  
                         </div>
                         <div class="col-sm-4">
                             <a href="https://devon-dheeru-ben.herokuapp.com/">
                                 <!-- <h6>Cinema Snapshot</h6> -->
-                                <img class="pic" src= "assets/images/cinemaSnap.png" alt= "cinemaSnapshot" style="width: 90%; margin-top: 15%;"> 
+                                <img class="pic" src= "assets/images/cinemaSnap.png" alt= "cinemaSnapshot" style="width: 90%; margin-top: 15%;" data-toggle="tooltip" title="Movie review and discovery web app built using HTML, mySQL, Bootstrap, Javascript, JQuery and the OMDB API"> 
                             </a>  
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/group-project/">
                                 <!-- <h6>Event Finder</h6> -->
-                                <img class="pic" src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;"> 
+                                <img class="pic" src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;" data-toggle="tooltip" title="Web app that allows users to find events and tickets to things going on near them. Built using HTML, Firebase, Bootstrap, JQuery, Javascript and Ticketmaster/Eventful APIs"> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://bookapp-bc.herokuapp.com/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img class="pic" id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks"> 
+                                <img class="pic" id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks" data-toggle="tooltip" title="MERN stack web app that allows users to search for, see information about and save books from Google Books. CSS is pure CSS."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/gif-homework/">
                                 <!-- <h6>Giphy</h6> -->
-                                <img class="pic" id="giphy" src= "assets/images/giphy.png" alt= "giphy"> 
+                                <img class="pic" id="giphy" src= "assets/images/giphy.png" alt= "giphy" data-toggle="tooltip" title="Web app that calls on the Giphy API using Javascript and JQuery to return to the user a collection of Gifs related to their searches."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/train-scheduler/">
                                     <!-- <h6>Train Scheduler</h6> -->
-                                <img class="pic" id="train" src= "assets/images/train.jpeg" alt= "trainScheduler"> 
+                                <img class="pic" id="train" src= "assets/images/train.jpeg" alt= "trainScheduler" data-toggle="tooltip" title="App that allows users to view and add train schedules to the page. Firebase used to store the data."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/trivia-game/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img class="pic" id="train" src= "assets/images/cast.jpg" alt= "seinfeld"> 
+                                <img class="pic" id="train" src= "assets/images/cast.jpg" alt= "seinfeld" data-toggle="tooltip" title="Seinfeld-themed trivia game that uses HTML, CSS and Javascript for its core funtionality. Includes a timer functionality."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/word-guess-game/">
                                 <!-- <h6>Giphy</h6> -->
-                                <img class="pic" id="hangman" src= "assets/images/hangman-style.png" alt= "hangman"> 
+                                <img class="pic" id="hangman" src= "assets/images/hangman-style.png" alt= "hangman" data-toggle="tooltip" title="Hangman style word guess game that uses HTML, CSS and Javascript."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
                             <a href="https://bc-burger-app.herokuapp.com/">
                                     <!-- <h6>Train Scheduler</h6> -->
-                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger"> 
+                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger" data-toggle="tooltip" title="9"> 
                             </a>                          
                         </div>
                     </div>
