--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
                         <div class="col-sm-4">
                             <a href="https://bc-burger-app.herokuapp.com/">
                                     <!-- <h6>Train Scheduler</h6> -->
-                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger" data-toggle="tooltip" title="9"> 
+                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger" data-toggle="tooltip" title='MERN stack web app that allows users to create different types of burgers to be added to the "menu" that can subsequently be "devoured" by other user'> 
                             </a>                          
                         </div>
                     </div>
