--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Ben Cooley</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -28,7 +28,7 @@
         </nav>
     </div>
 
-    <div class="box container">
+    <div class="aboutBox box container">
         <!-- trying to make another box for the text and image section in middle of page here -->
         <box>
             <h2 class="title">About Me</h2>
