--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <box>
             <h2 class="title">About Me</h2>
                 <!-- <hr> -->
-                <img class="profile-pic" src= "assets/images/profile picture.jpeg" alt= "Ben Cooley">
+                <div class="profile-pic"><img src= "assets/images/profile picture.jpeg" alt= "Ben Cooley"></div>
                     <p id="p-one"> 
                         Welcome to my page.  I am working on sharpening this puppy up before dropping it on some employers.
                     </p>
