spacing of contact links

--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
             <box>
                 <h2 class="title">Contact
                     <h4>
-                        <a class="contactPics" href="https://github.com/be-cool"><img id="github" src="/assets/images/gh.png" alt="github"></a>     
-                        <a class="contactPics" href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="/assets/images/li.png" alt="linkedin"></a></h4>
+                        <a class="contactPics col-xs-5" href="https://github.com/be-cool"><img id="github" src="/assets/images/gh.png" alt="github"></a>     
+                        <a class="contactPics col-xs-5" href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="/assets/images/li.png" alt="linkedin"></a></h4>
                             <div class="contactInfo">
                                 <h4>Email: <a href="mailto:bcooley58@gmail.com">bcooley58@gmail.com</a></h4>
                                 <h4>Cell Phone: 267-257-4232</h4>
