contact photo update

--- a/index.html
+++ b/index.html
@@ -1,72 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ben Cooley - Profile</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style_all_pages.css">
-    <link rel="stylesheet" href="assets/css/style_index.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style_all_pages.css" />
+    <link rel="stylesheet" href="assets/css/style_index.css" />
+  </head>
 
-<body>
-
+  <body>
     <div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Ben Cooley</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">About</a>
-                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
-              </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Ben Cooley</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="true"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">About</a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
+      </nav>
     </div>
 
     <div class="aboutBox box container">
-        <!-- trying to make another box for the text and image section in middle of page here -->
-        <box>
-            <h2 class="title">About Me</h2>
-                <!-- <hr> -->
-                <div class="profile-pic"><img src= "assets/images/profile picture.jpeg" alt= "Ben Cooley"></div>
-                    <p id="p-one"> 
-                        Welcome to my page.  I am working on sharpening this puppy up before dropping it on some employers.
-                    </p>
-                    <p id="p-two">
-                        Hopefully it looks decent.
-                    </p>
-                    <p id="p-three">
-                        HUHHHHH!
-                    </p>
-        </box>
+      <!-- trying to make another box for the text and image section in middle of page here -->
+      <box>
+        <h2 class="title">About Me</h2>
+        <!-- <hr> -->
+        <div class="profile-pic">
+          <img src="assets/images/profile picture.jpeg" alt="Ben Cooley" />
+        </div>
+        <p id="p-one">
+          Welcome to my profile! My name is Ben Cooley and I am a full-stack web
+          developer from Philadelphia.
+        </p>
+        <p id="p-two">
+          I recently graduated from the Penn LPS Coding Bootcamp at the
+          University of Pennsylvania where I was lucky enough to be a part of a
+          6-month full-stack web development course. The bootcamp navigated us through the front-end and back-end languages that are currently some of the most prevalent in the industry. The majorit of my focus and knowledge gained from the bootcamp was 
+          <!-- While the course was taught -->
+          <!-- predominantly in Javascript we began by navigating through basic HTML -->
+          <!-- and CSS applications. Pretty quickly I found myself integrating
+          Javascript into every application I made. Although there was a premium
+          on understanding vanilla Javascript, we also spent a lot of time
+          learning, understanding and sharpening our skills of many Javascript
+          frameworks and libraries. Most specifically, I was able to spend
+          plenty of time working through React applications and getting
+          comfortable with the concept of state. Being that the bootcampt was a
+          full-stack course, we did not stop at the front end; I learned how to
+          utilize different databases to make my applications more dynamic and
+          powerful. -->
+        </p>
+        <p id="p-three">
+          I am a 2015 graduate from the University of Pennsylvania with a degree
+          in Cognitive Science - focused in neuroscience. Since graduating, I
+          have spent time working for the 76ers organization, as a financial
+          representative with Northwestern Mutual, and I traveled the country as
+          a caddie for a professional golfer on the PGA Web.com Tour in 2018.
+          While enrolled at the Penn Coding Bootcamp, I have also been working
+          part-time for a real estate investment/management company in Fort
+          Washington, PA called Intercontinental Development.
+        </p>
+      </box>
     </div>
     <div class="skillsBox box container">
-            <!-- trying to make another box for the text and image section in middle of page here -->
-            <box>
-                <h2 class="title">Skills</h2>
-                    <div class="meter"> 
-                        <span style="width:85%;"><span class="progress"><h5 id="skill">HTML & CSS - 90%</h5></span></span>
-                    </div>
-                    <div class="meter"> 
-                        <span style="width:55%;"><span class="progress"><h5 id="skill">React - 50%</h5></span></span>
-                    </div>
-                    <div class="meter">
-                        <span style="width:75%;"><span class="progress"><h5 id="skill">Javascript - 70%</h5></span></span>
-                    </div>
-                    <div class="meter"> 
-                        <span style="width:50%;"><span class="progress"><h5 id="skill">MongoDB - 40%</h5></span></span>
-                    </div>
-                <h5 class="skills">Have created web applications with, or possess working knowledge of: Node.js, Express, MySQL, JQuery, RESTful APIs, Handlebars, Firebase, React Hooks</h5>
-            </box>
+      <!-- trying to make another box for the text and image section in middle of page here -->
+      <box>
+        <h2 class="title">Skills</h2>
+        <div class="meter">
+          <span style="width:85%;"
+            ><span class="progress"
+              ><h5 id="skill">HTML & CSS - 90%</h5></span
+            ></span
+          >
         </div>
-        <!-- <hr> -->
+        <div class="meter">
+          <span style="width:55%;"
+            ><span class="progress"><h5 id="skill">React - 55%</h5></span></span
+          >
+        </div>
+        <div class="meter">
+          <span style="width:75%;"
+            ><span class="progress"
+              ><h5 id="skill">Javascript - 70%</h5></span
+            ></span
+          >
+        </div>
+        <div class="meter">
+          <span style="width:50%;"
+            ><span class="progress"
+              ><h5 id="skill">MongoDB - 50%</h5></span
+            ></span
+          >
+        </div>
+        <h5 class="skills">
+          Have created web applications with, or possess working knowledge of:
+          Node.js, Express, MySQL, JQuery, RESTful APIs, Handlebars, Firebase,
+          React Hooks
+        </h5>
+      </box>
+    </div>
+    <!-- <hr> -->
     <footer>copyright</footer>
-
-</body>
-
+  </body>
 </html>
